# bedrock-bio-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-dev.yml  publish-prod.yml  python-build.yml  python-ci.yml  python-lint.yml  python-publish-dev.yml  python-publish-prod.yml  python-test.yml  r-build.yml  r-check.yml  r-ci.yml  r-lint.yml
python/: README.md  pyproject.toml
python/src/bedrock_bio/: __init__.py  config.py  describe_dataset.py  list_datasets.py  load_dataset.py  utils.py
python/tests/: conftest.py  test_config.py  test_describe_dataset.py  test_init.py  test_list_datasets.py  test_load_dataset.py  test_utils.py
r/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cran-comments.md
r/R/: describe_dataset.R  list_datasets.R  load_dataset.R  utils.R  zzz.R
r/man/: describe_dataset.Rd  get_catalog.Rd  get_connection.Rd  get_credentials.Rd  has_connection.Rd  list_datasets.Rd  load_dataset.Rd
r/tests/testthat/: test-describe_dataset.R  test-list_datasets.R  test-load_dataset.R  test-utils.R
src/bedrock_bio/: __init__.py
tests/: smoke_test.py
