[project]
name = "bedrock_bio"
version = "1.2.1"
description = "Open-Access Computational Biology Datasets"
readme = "README.md"
authors = [
    { name = "Liam Abbott", email = "liam@bedrock.bio" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]
